--- a/wax agere .html
+++ b/wax agere .html
@@ -54,5 +54,33 @@
     </div>
 
 
+
+      <!-- Tienda -->
+  <section class="productos">
+    <div class="producto">
+      <img src="a10.jpg" alt="200" width="200 "/> 
+      <h3>Suculenta agaves </h3>
+      <p>$35</p> 
+      <button onclick="agregarAlCarrito('Suculenta A')">Agregar al carrito</button>
+    </div>
+
+      <!-- Tienda -->
+  <section class="productos">
+    <div class="producto">
+      <img src="10a.jpg" alt="200" width="200 "/> 
+      <h3>Suculenta agaves </h3>
+      <p>$35</p> 
+      <button onclick="agregarAlCarrito('Suculenta A')">Agregar al carrito</button>
+    </div>
+
+      <!-- Tienda --> 
+  <section class="productos">
+    <div class="producto"> 
+      <img src="11a.jpg" alt="200" width="200 "/> 
+      <h3>Suculenta agaves </h3>
+      <p>$35</p> 
+      <button onclick="agregarAlCarrito('Suculenta A')">Agregar al carrito</button>
+    </div>
+
     <!-- Puedes duplicar este div para más productos -->
   </section>
