--- a/cuidado.html
+++ b/cuidado.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contanctanos </title> 
     <link rel="stylesheet" href="stayle.css">
     <script src="Script.js"></script> 
 
@@ -30,6 +30,8 @@
 
 
 
+
+
   <section id="contacto">
     <h2>Contáctanos en redes sociales</h2>
     <a href="https://www.facebook.com/" target="_blank">Facebook</a> |
@@ -39,23 +41,20 @@
   </section>
 
 
+ <form class="formulario">
+    <h2>Para mas dudas contantenos </h2>
 
+    <label for="nombre">Nombre:</label>
+    <input type="text" id="nombre" name="nombre" required>
 
-  <h2>DUDAS </h2> 
-<form action="procesar.php" method="post">
-  <label for="nombre">Nombre:</label>
-  <input type="text" id="nombre" name="nombre" required><br><br>
+    <label for="email">Correo electrónico:</label>
+    <input type="email" id="email" name="email" required>
 
-  <label for="email">Correo electrónico:</label>
-  <input type="email" id="email" name="email" required><br><br>
+    <label for="mensaje">Mensaje:</label>
+    <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
 
-  <label for="mensaje">Mensaje:</label><br>
-  <textarea id="mensaje" name="mensaje" rows="4" cols="30"></textarea><br><br>
-
-  <button type="submit">Enviar</button>
-</form>
-
-
+    <button type="submit">Enviar</button>
+  </form>
 
 
 
@@ -74,12 +73,5 @@
 
 
 
-<section id="contacto">
-    <h2>Contacto</h2>
-    <form id="formulario">
-        <input type="text" placeholder="Nombre" required>
-        <input type="email" placeholder="Correo" required>
-        <textarea placeholder="Mensaje"></textarea>
-        <button type="submit">Enviar</button>
-    </form>
-</section>
+
+
