--- a/sedum.html
+++ b/sedum.html
@@ -54,5 +54,46 @@
     </div>
 
 
+
+      <!-- Tienda -->
+  <section class="productos">
+    <div class="producto">
+      <img src="sedum 12.jpg" alt="200" width="200 "/> 
+      <h3>Suculenta lolas </h3>
+      <p>$35</p> 
+      <button onclick="agregarAlCarrito('Suculenta A')">Agregar al carrito</button>
+    </div>
+
+
+
+      <!-- Tienda -->
+  <section class="productos">
+    <div class="producto">
+      <img src="sedum 13.jpg" alt="200" width="200 "/> 
+      <h3>Suculenta lolas </h3>
+      <p>$35</p> 
+      <button onclick="agregarAlCarrito('Suculenta A')">Agregar al carrito</button>
+    </div>
+
+
+    
+   <!-- Tienda -->
+  <section class="productos">
+    <div class="producto">
+      <img src="sedum 14.jpg" alt="200" width="200 "/> 
+      <h3>Suculenta lolas </h3>
+      <p>$35</p> 
+      <button onclick="agregarAlCarrito('Suculenta A')">Agregar al carrito</button>
+    </div>
+
+       <!-- Tienda -->
+  <section class="productos">
+    <div class="producto">
+      <img src="sedum 15.jpg" alt="200" width="200 "/>  
+      <h3>Suculenta lolas </h3>
+      <p>$35</p> 
+      <button onclick="agregarAlCarrito('Suculenta A')">Agregar al carrito</button>
+    </div>
+
     <!-- Puedes duplicar este div para más productos -->
   </section>
